--- a/examples/simple-blog/settings.gradle
+++ b/examples/simple-blog/settings.gradle
@@ -1,1 +1,6 @@
 rootProject.name = 'simple-blog'
+
+if (file('../../graphi4j')) {
+  include ':graphi4j'
+  project(':graphi4j').projectDir = file('../../graphi4j')
+}
